chore: chatgpt failed me

--- a/kubernetes/apps/kyverno/kyverno/policies/requests.yaml
+++ b/kubernetes/apps/kyverno/kyverno/policies/requests.yaml
@@ -10,263 +10,19 @@ spec:
         any:
           - resources:
               kinds:
-                - Pod
                 - Deployment
                 - StatefulSet
                 - DaemonSet
                 - Job
                 - CronJob
       mutate:
-        patches:
-          - target:
-              group: ""
-              version: v1
-              kind: Pod
-              path: /spec/containers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: ""
-              version: v1
-              kind: Pod
-              path: /spec/initContainers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: ""
-              version: v1
-              kind: Pod
-              path: /spec/ephemeralContainers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: ""
-              version: v1
-              kind: Pod
-              path: /spec/containers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: ""
-              version: v1
-              kind: Pod
-              path: /spec/initContainers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: ""
-              version: v1
-              kind: Pod
-              path: /spec/ephemeralContainers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: apps
-              version: v1
-              kind: Deployment
-              path: /spec/template/spec/containers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: apps
-              version: v1
-              kind: Deployment
-              path: /spec/template/spec/initContainers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: apps
-              version: v1
-              kind: Deployment
-              path: /spec/template/spec/ephemeralContainers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: apps
-              version: v1
-              kind: Deployment
-              path: /spec/template/spec/containers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: apps
-              version: v1
-              kind: Deployment
-              path: /spec/template/spec/initContainers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: apps
-              version: v1
-              kind: Deployment
-              path: /spec/template/spec/ephemeralContainers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: apps
-              version: v1
-              kind: StatefulSet
-              path: /spec/template/spec/containers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: apps
-              version: v1
-              kind: StatefulSet
-              path: /spec/template/spec/initContainers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: apps
-              version: v1
-              kind: StatefulSet
-              path: /spec/template/spec/ephemeralContainers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: apps
-              version: v1
-              kind: StatefulSet
-              path: /spec/template/spec/containers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: apps
-              version: v1
-              kind: StatefulSet
-              path: /spec/template/spec/initContainers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: apps
-              version: v1
-              kind: StatefulSet
-              path: /spec/template/spec/ephemeralContainers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: apps
-              version: v1
-              kind: DaemonSet
-              path: /spec/template/spec/containers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: apps
-              version: v1
-              kind: DaemonSet
-              path: /spec/template/spec/initContainers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: apps
-              version: v1
-              kind: DaemonSet
-              path: /spec/template/spec/ephemeralContainers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: apps
-              version: v1
-              kind: DaemonSet
-              path: /spec/template/spec/containers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: apps
-              version: v1
-              kind: DaemonSet
-              path: /spec/template/spec/initContainers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: apps
-              version: v1
-              kind: DaemonSet
-              path: /spec/template/spec/ephemeralContainers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: batch
-              version: v1
-              kind: Job
-              path: /spec/template/spec/containers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: batch
-              version: v1
-              kind: Job
-              path: /spec/template/spec/initContainers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: batch
-              version: v1
-              kind: Job
-              path: /spec/template/spec/ephemeralContainers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: batch
-              version: v1
-              kind: Job
-              path: /spec/template/spec/containers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: batch
-              version: v1
-              kind: Job
-              path: /spec/template/spec/initContainers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: batch
-              version: v1
-              kind: Job
-              path: /spec/template/spec/ephemeralContainers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: batch
-              version: v1
-              kind: CronJob
-              path: /spec/jobTemplate/spec/template/spec/containers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: batch
-              version: v1
-              kind: CronJob
-              path: /spec/jobTemplate/spec/template/spec/initContainers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: batch
-              version: v1
-              kind: CronJob
-              path: /spec/jobTemplate/spec/template/spec/ephemeralContainers/{{element}}/resources/requests/cpu
-            patch: |-
-              "10m"
-          - target:
-              group: batch
-              version: v1
-              kind: CronJob
-              path: /spec/jobTemplate/spec/template/spec/containers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: batch
-              version: v1
-              kind: CronJob
-              path: /spec/jobTemplate/spec/template/spec/initContainers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
-          - target:
-              group: batch
-              version: v1
-              kind: CronJob
-              path: /spec/jobTemplate/spec/template/spec/ephemeralContainers/{{element}}/resources/requests/memory
-            patch: |-
-              "64Mi"
+        patchStrategicMerge:
+          spec:
+            template:
+              spec:
+                containers:
+                  - (name): "*"
+                    resources:
+                      requests:
+                        cpu: 10m
+                        memory: 64Mi
