chore: fix policy

--- a/kubernetes/apps/kyverno/kyverno/policies/requests.yaml
+++ b/kubernetes/apps/kyverno/kyverno/policies/requests.yaml
@@ -12,6 +12,7 @@ spec:
               kinds:
                 - Deployment
                 - StatefulSet
+                - ReplicaSet
                 - DaemonSet
                 - Job
                 - CronJob
