chore: fix policy

--- a/kubernetes/apps/kyverno/kyverno/policies/requests.yaml
+++ b/kubernetes/apps/kyverno/kyverno/policies/requests.yaml
@@ -21,6 +21,12 @@ spec:
           spec:
             template:
               spec:
+                initContainers:
+                  - (name): "*"
+                    resources:
+                      requests:
+                        cpu: 10m
+                        memory: 64Mi
                 containers:
                   - (name): "*"
                     resources:
