--- a/kubernetes/apps/istio-system/istio-base/ks.yaml
+++ b/kubernetes/apps/istio-system/istio-base/ks.yaml
@@ -1,24 +1,24 @@
----
 # yaml-language-server: $schema=https://kubernetes-schemas.solanyn.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app kubeflow
-  namespace: kubeflow-system
+  name: &app istio-base
+  namespace: &namespace istio-system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: istiod
-      namespace: istio-system
   interval: 1h
-  path: ./kubernetes/apps/kubeflow-system/kubeflow/manifests
+  path: ./kubernetes/apps/istio-system/istio-base/app
+  postBuild:
+    substitute:
+      APP: *app
   prune: true
   retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: *namespace
   timeout: 5m
   wait: false
