chore: add config

--- a/kubernetes/apps/istio-system/istiod/app/helmrelease.yaml
+++ b/kubernetes/apps/istio-system/istiod/app/helmrelease.yaml
@@ -37,6 +37,12 @@ spec:
       requests:
         cpu: 10m
         memory: 64Mi
+    global:
+      proxy:
+        resources:
+          requests:
+            cpu: 10m
+            memory: 64Mi
     meshConfig:
       extensionProviders:
         - name: oauth2-proxy
