--- a/kubernetes/apps/istio-system/istio-ingressgateway/app/helmrelease.yaml
+++ b/kubernetes/apps/istio-system/istio-ingressgateway/app/helmrelease.yaml
@@ -33,6 +33,7 @@ spec:
       strategy: rollback
       retries: 3
   values:
+    revision: default
     service:
       type: ClusterIP
     securityContext:
