chore: add revision to istio gateways

--- a/kubernetes/apps/istio-system/cluster-local-gateway/app/helmrelease.yaml
+++ b/kubernetes/apps/istio-system/cluster-local-gateway/app/helmrelease.yaml
@@ -37,6 +37,6 @@ spec:
       requests:
         cpu: 10m
         memory: 64Mi
-    revision: default
+    revision: "default"
     service:
       type: ClusterIP
