--- a/kubernetes/apps/istio-system/kustomization.yaml
+++ b/kubernetes/apps/istio-system/kustomization.yaml
@@ -3,18 +3,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: istio-system
 components:
-  - ../../components/common
+  - ../../components/istio
 resources:
   - ./istio-base/ks.yaml
   - ./istiod/ks.yaml
   - ./cluster-local-gateway/ks.yaml
   - ./istio-ingressgateway/ks.yaml
-patches:
-  - patch: |
-      apiVersion: v1
-      kind: Namespace
-      metadata:
-        name: istio-system
-        labels:
-          istio-operator-managed: Reconcile
-          istio-injection: disabled
