--- a/kubernetes/components/istio/kustomization.yaml
+++ b/kubernetes/components/istio/kustomization.yaml
@@ -3,6 +3,15 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 resources:
-  - ./namespace.yaml
+  - ../common/namespace.yaml
   - ../common/alerts
   - ../common/sops
+patches:
+  - patch: |
+      apiVersion: v1
+      kind: Namespace
+      metadata:
+        name: not-used
+        labels:
+          istio-injection: disabled
+          istio-operator-managed: Reconcile
