--- a/kubernetes/components/istio/kustomization.yaml
+++ b/kubernetes/components/istio/kustomization.yaml
@@ -13,5 +13,5 @@ patches:
       metadata:
         name: not-used
         labels:
-          istio-injection: disabled
+          istio-injection: enabled
           istio-operator-managed: Reconcile
