--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/httproute.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/httproute.yaml
@@ -4,7 +4,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: kubeflow
-  namespace: kubeflow-system
+  namespace: istio-system
 spec:
   hostnames: ["kubeflow.goyangi.cloud"]
   parentRefs:
@@ -16,3 +16,4 @@ spec:
         - name: istio-ingressgateway
           namespace: istio-system
           port: 8080
+
