--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
@@ -102,3 +102,24 @@ spec:
   dataFrom:
     - extract:
         key: mariadb
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: oauth2-proxy
+  namespace: oauth2-proxy
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
+  target:
+    creationPolicy: Merge
+    name: oauth2-proxy
+    template:
+      data:
+        client-id: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
+        client-secret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
+        cookie-secret: "{{ .KUBEFLOW_OAUTH2_PROXY_COOKIE_SECRET }}"
+  dataFrom:
+    - extract:
+        key: kubeflow
