chore: add placeholder oauth2-proxy secret

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -204,5 +204,12 @@ configMapGenerator:
     behavior: replace
     files:
       - oauth2_proxy.cfg=./resources/oauth2_proxy.cfg
+  - name: oauth2-proxy
+    namespace: oauth2-proxy
+    behavior: replace
+    literals:
+      - client-id=replaced-by-eso
+      - client-secret=replaced-by-eso
+      - cookie-secret=replaced-by-eso
 generatorOptions:
   disableNameSuffixHash: true
