--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -204,6 +204,7 @@ configMapGenerator:
     behavior: replace
     files:
       - oauth2_proxy.cfg=./resources/oauth2_proxy.cfg
+secretGenerator:
   - name: oauth2-proxy
     namespace: oauth2-proxy
     behavior: replace
