chore: add oidc provider to dex

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/resources/oauth2_proxy.cfg
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/resources/oauth2_proxy.cfg
@@ -1,12 +1,9 @@
-# based on https://github.com/kubeflow/manifests/blob/master/common/oauth2-proxy/base/oauth2_proxy.cfg
-# modified for pocket id
 provider = "oidc"
 oidc_issuer_url = "https://id.goyangi.cloud"
-scope = "openid email profile" # remove groups since they are not used yet
-email_domains = [ "*" ]
+scope = "openid email offline_access profile" # remove groups since they are not used yet
+email_domains = "*"
+insecure_oidc_allow_unverified_email = "true"
 
-# serve a static HTTP 200 upstream on for authentication success
-# we are using oauth2-proxy as an ExtAuthz to "check" each request, not pass it on
 upstreams = [ "static://200" ]
 
 # skip authentication for these paths
@@ -14,27 +11,34 @@ skip_auth_routes = [
     "^/dex/",
 ]
 
-# requests to paths matching these regex patterns will receive a 401 Unauthorized response
-# when not authenticated, instead of being redirected to the login page with a 302,
-# this prevents background requests being redirected to the login page,
-# and the accumulation of CSRF cookies
 api_routes = [
-    # Generic
-    # NOTE: included because most background requests contain these paths
     "/api/",
     "/apis/",
-
-    # Kubeflow Pipelines
-    # NOTE: included because KFP UI makes MANY background requests to these paths but because they are
-    #       not `application/json` requests, oauth2-proxy will redirect them to the login page
     "^/ml_metadata",
 ]
 
-skip_provider_button = true
+skip_oidc_discovery = true
+login_url = "/dex/auth"
+redeem_url = "http://dex.auth.svc.cluster.local:5556/dex/token"
+oidc_jwks_url = "http://dex.auth.svc.cluster.local:5556/dex/keys"
+
+skip_provider_button = false
+
+provider_display_name = "Pocket ID"
+custom_sign_in_logo = "/custom-theme/kubeflow-logo.svg"
+banner = "-"
+footer = "-"
+
+prompt = "none"
+
 set_authorization_header = true
 set_xauthrequest = true
+
 cookie_name = "oauth2_proxy_kubeflow"
 cookie_expire = "24h"
 cookie_refresh = "1h" # This improves the user experience a lot
-redirect_url = "https://kubeflow.goyangi.cloud/oauth2/callback"
-relative_redirect_url = false
+
+code_challenge_method = "S256"
+
+redirect_url = "/oauth2/callback"
+relative_redirect_url = true
