--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -93,10 +93,16 @@ components:
   - ./upstream/experimental/security/PSS/dynamic/restricted
 
 patches:
-  # istio
-  - path: ./patches/istio/delete.global-deny-all.authorizationpolicy.yaml
+  # dex
+  - path: ./patches/dex/patch.dex.configmap.yaml
     target:
-      name: global-deny-all
+      name: dex
+      namespace: auth
+
+  # istio
+  # - path: ./patches/istio/delete.global-deny-all.authorizationpolicy.yaml
+  #   target:
+  #     name: global-deny-all
 
   - path: ./patches/istio/patch.istio-sidecar-injector.configmap.yaml
     target:
@@ -194,19 +200,11 @@ patches:
       name: katib-mysql
       kind: Service
       namespace: kubeflow
-# configMapGenerator:
-#   - name: oauth2-proxy
-#     namespace: oauth2-proxy
-#     behavior: replace
-#     files:
-#       - oauth2_proxy.cfg=./resources/oauth2_proxy.cfg
-# secretGenerator:
-#   - name: oauth2-proxy
-#     namespace: oauth2-proxy
-#     behavior: replace
-#     literals:
-#       - client-id=replaced-by-eso
-#       - client-secret=replaced-by-eso
-#       - cookie-secret=replaced-by-eso
-# generatorOptions:
-#   disableNameSuffixHash: true
+configMapGenerator:
+  - name: oauth2-proxy
+    namespace: oauth2-proxy
+    behavior: replace
+    files:
+      - oauth2_proxy.cfg=./resources/oauth2_proxy.cfg
+generatorOptions:
+  disableNameSuffixHash: true
