--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
@@ -106,18 +106,19 @@ spec:
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: dex
+  name: dex-oidc-client
   namespace: auth
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: dex-secret
+    creationPolicy: Merge
+    name: dex-oidc-client
     template:
       data:
-        clientId: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
-        clientSecret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
+        OIDC_CLIENT_ID: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
+        OIDC_CLIENT_SECRET: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
   dataFrom:
     - extract:
         key: kubeflow
