--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -94,19 +94,8 @@ components:
 
 patches:
   # dex
+  - path: ./patches/dex/delete.dex-passwords.secret.yaml
   - path: ./patches/dex/patch.dex.configmap.yaml
-    target:
-      name: dex
-      namespace: auth
-
-  # istio
-  # - path: ./patches/istio/delete.global-deny-all.authorizationpolicy.yaml
-  #   target:
-  #     name: global-deny-all
-
-  - path: ./patches/istio/patch.istio-sidecar-injector.configmap.yaml
-    target:
-      name: istio-sidecar-injector
 
   # kserve
   - path: ./patches/kserve/patch.clusterservingruntime.yaml
