--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/dex/patch.dex.configmap.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/dex/patch.dex.configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: dex
+  namespace: auth
 data:
   config.yaml: |
     issuer: https://id.goyangi.cloud
