chore: enable root priveleges for mflow

--- a/kubernetes/apps/default/mlflow/app/helmrelease.yaml
+++ b/kubernetes/apps/default/mlflow/app/helmrelease.yaml
@@ -48,8 +48,8 @@ spec:
                 enabled: true
               readiness: *probes
             securityContext:
-              allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: true
+              allowPrivilegeEscalation: true
+              readOnlyRootFilesystem: false
               capabilities: { drop: ["ALL"] }
             resources:
               requests:
