--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
@@ -122,3 +122,22 @@ spec:
   dataFrom:
     - extract:
         key: kubeflow
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: dex
+  namespace: auth
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
+  target:
+    name: dex
+    template:
+      data:
+        clientId: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
+        clientSecret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
+  dataFrom:
+    - extract:
+        key: kubeflow
