--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/dex/patch.dex.configmap.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/dex/patch.dex.configmap.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: auth
 data:
   config.yaml: |
-    issuer: https://id.goyangi.cloud
+    issuer: http://dex.auth.svc.cluster.local:5556/dex
     storage:
       type: kubernetes
       config:
@@ -26,7 +26,7 @@ data:
         issuer: https://id.goyangi.cloud
         clientID: $dex-oidc-client.OIDC_CLIENT_ID
         clientSecret: $dex-oidc-client.OIDC_CLIENT_SECRET
-        redirectURI: https://kubeflow.goyangi.cloud/dex
+        redirectURI: http://dex.auth.svc.cluster.local:5556/callback
         insecure: false
         insecureSkipEmailVerified: true
         userNameKey: email
