--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/dex/patch.dex.configmap.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/dex/patch.dex.configmap.yaml
@@ -26,7 +26,7 @@ data:
         issuer: https://id.goyangi.cloud
         clientID: $dex-oidc-client.OIDC_CLIENT_ID
         clientSecret: $dex-oidc-client.OIDC_CLIENT_SECRET
-        redirectURI: http://dex.auth.svc.cluster.local:5556/callback
+        redirectURI: https://kubeflow.goyangi.cloud/dex/callback
         insecure: false
         insecureSkipEmailVerified: true
         userNameKey: email
