--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/httproute.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/httproute.yaml
@@ -16,3 +16,21 @@ spec:
         - name: istio-ingressgateway
           namespace: istio-system
           port: 80
+---
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: dex
+  namespace: auth
+spec:
+  hostnames: ["dex.goyangi.cloud"]
+  parentRefs:
+    - name: internal
+      namespace: kube-system
+      sectionName: https
+  rules:
+    - backendRefs:
+        - name: dex
+          namespace: auth
+          port: 5556
