--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/resources/oauth2_proxy.cfg
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/resources/oauth2_proxy.cfg
@@ -1,12 +1,11 @@
 provider = "oidc"
 oidc_issuer_url = "https://id.goyangi.cloud"
-scope = "openid email offline_access profile" # remove groups since they are not used yet
+scope = "openid email profile" # remove groups since they are not used yet
 email_domains = "*"
 insecure_oidc_allow_unverified_email = "true"
 
 upstreams = [ "static://200" ]
 
-# skip authentication for these paths
 skip_auth_routes = [
     "^/dex/",
 ]
