chore: disable mlflow

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -27,7 +27,8 @@ resources:
   - ./meilisearch/ks.yaml
   - ./miniflux/ks.yaml
   - ./minio/ks.yaml
-  - ./mlflow/ks.yaml
+  # TODO: container doesn't startup for some reason, immediate crash
+  # - ./mlflow/ks.yaml
   - ./plex/ks.yaml
   - ./pocket-id/ks.yaml
   - ./prowlarr/ks.yaml
