chore: try ingress

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -87,7 +87,7 @@ resources:
   - ./upstream/apps/kserve/models-web-app/overlays/kubeflow
 
   - ./externalsecret.yaml
-  - ./httproute.yaml
+  - ./ingress.yaml
 
 components:
   - ./upstream/experimental/security/PSS/dynamic/restricted
