--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
@@ -106,19 +106,18 @@ spec:
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: dex-oidc-client
+  name: dex-pocket-id-connector
   namespace: auth
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    creationPolicy: Merge
-    name: dex-oidc-client
+    name: dex-pocket-id-connector
     template:
       data:
-        OIDC_CLIENT_ID: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
-        OIDC_CLIENT_SECRET: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
+        clientId: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
+        clientSecret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
   dataFrom:
     - extract:
         key: kubeflow
