--- a/kubernetes/apps/istio-system/istiod/app/helmrelease.yaml
+++ b/kubernetes/apps/istio-system/istiod/app/helmrelease.yaml
@@ -44,6 +44,7 @@ spec:
             cpu: 10m
             memory: 64Mi
     meshConfig:
+      accessLogFile: /dev/stdout
       extensionProviders:
         - name: oauth2-proxy
           envoyExtAuthzHttp:
