--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/resources/oauth2_proxy.cfg
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/resources/oauth2_proxy.cfg
@@ -1,8 +1,7 @@
 provider = "oidc"
 oidc_issuer_url = "https://id.goyangi.cloud"
 scope = "openid email profile" # remove groups since they are not used yet
-email_domains = "*"
-insecure_oidc_allow_unverified_email = "true"
+email_domains = [ "*" ]
 
 upstreams = [ "static://200" ]
 
@@ -16,28 +15,12 @@ api_routes = [
     "^/ml_metadata",
 ]
 
-skip_oidc_discovery = true
-login_url = "/dex/auth"
-redeem_url = "http://dex.auth.svc.cluster.local:5556/dex/token"
-oidc_jwks_url = "http://dex.auth.svc.cluster.local:5556/dex/keys"
-
-skip_provider_button = false
-
-provider_display_name = "Pocket ID"
-custom_sign_in_logo = "/custom-theme/kubeflow-logo.svg"
-banner = "-"
-footer = "-"
-
-prompt = "none"
-
+skip_provider_button = true
 set_authorization_header = true
 set_xauthrequest = true
-
 cookie_name = "oauth2_proxy_kubeflow"
 cookie_expire = "24h"
 cookie_refresh = "1h" # This improves the user experience a lot
+redirect_url = "https://kubeflow.goyangi.cloud/oauth2/callback"
+relative_redirect_url = false
 
-code_challenge_method = "S256"
-
-redirect_url = "/oauth2/callback"
-relative_redirect_url = true
