chore: create template oauth2-proxy secret + eso injected

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -186,11 +186,21 @@ patches:
       name: katib-mysql
       kind: Service
       namespace: kubeflow
+
 configMapGenerator:
   - name: oauth2-proxy
     namespace: oauth2-proxy
     behavior: replace
     files:
       - oauth2_proxy.cfg=./resources/oauth2_proxy.cfg
+
+secretGenerator:
+  - name: oauth2-proxy
+    type: Opaque
+    literals:
+      - client-id=kubeflow-oidc-authservice
+      - client-secret=pUBnBOY80SnXgjibTYM9ZWNzY2xreNGQok
+      - cookie-secret=7d16fee92f8d11b8940b081b3f8b8acb
+
 generatorOptions:
   disableNameSuffixHash: true
