--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
@@ -106,18 +106,20 @@ spec:
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: dex-pocket-id-connector
-  namespace: auth
+  name: oauth2-proxy
+  namespace: oauth2-proxy
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: dex-pocket-id-connector
+    creationPolicy: Merge
+    name: oauth2-proxy
     template:
       data:
-        clientId: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
-        clientSecret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
+        client-id: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
+        client-secret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
+        cookie-secret: "{{ .KUBEFLOW_OAUTH2_PROXY_COOKIE_SECRET }}"
   dataFrom:
     - extract:
         key: kubeflow
