chore: create template oauth2-proxy secret + eso injected

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -196,6 +196,7 @@ configMapGenerator:
 
 secretGenerator:
   - name: oauth2-proxy
+    behavior: replace
     type: Opaque
     literals:
       - client-id=kubeflow-oidc-authservice
