chore: add kubeflow profile

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -86,6 +86,7 @@ resources:
   - ./upstream/apps/kserve/kserve
   - ./upstream/apps/kserve/models-web-app/overlays/kubeflow
 
+  - ./profile.yaml
   - ./requestauthentication.yaml
   - ./externalsecret.yaml
   - ./httproute.yaml
