chore: update config
* skip auth on callback instead of dex

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/resources/oauth2_proxy.cfg
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/resources/oauth2_proxy.cfg
@@ -6,7 +6,7 @@ email_domains = [ "*" ]
 upstreams = [ "static://200" ]
 
 skip_auth_routes = [
-    "^/dex/",
+    "^/oauth2/callback/",
 ]
 
 api_routes = [
