--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/resources/oauth2_proxy.cfg
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/resources/oauth2_proxy.cfg
@@ -6,7 +6,7 @@ email_domains = [ "*" ]
 upstreams = [ "static://200" ]
 
 skip_auth_routes = [
-    "^/oauth2/callback/",
+    "^/dex/",
 ]
 
 api_routes = [
